--- a/main.ipynb
+++ b/main.ipynb
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    "df=pd.read_csv(r\"D:\\Python\\Project\\Customer-Personality-Analysis\\marketing_campaign.csv\",sep=\"\\t\").dropna()\n",
+    "df=pd.read_csv(r\"marketing_campaign.csv\",sep=\"\\t\").dropna()\n",
     "df.head(3)"
    ]
   },
